# robodog

./: .gitignore  GOOGLE_CALENDAR_INTEGRATION.md  GOOGLE_INTEGRATION_SUMMARY.md  MCP_GOOGLE_INTEGRATION_COMPLETE.md  MCP_GOOGLE_TEST_SUCCESS.md  MCP_OPERATIONS_COMPLETE.md  README.md  RUN_FIXES_NOW.bat  SERVICE_RUNNING.md  SYSTEM_FIXES_README.md  SYSTEM_HEALTH_REPORT.md  TESTING_UI_GUIDE.md  build.py  check_driver_updates.ps1  create_doc_auto.py  create_todoist_task.py  email_automation_workflow.py  fix_shadow_storage.ps1  fix_wifi_power.ps1  fix_windows_defender.ps1  google_config.example.yaml  index.html  inspect_github.js  organize_postman.py  out.md  package-lock.json  package.json  playwright.config.ts  robodog.md  robotdog.vsdx  run_all_fixes.ps1  test_amplenote_token.py  test_calendar.py  test_create_google_doc.py  test_google_integration.py  test_google_service_unit.py  test_integrations.spec.js  test_integrations_ui.html  test_mcp_google.py  test_out.txt  (+3 more)
apps/cli/robodog/: LICENSE  ROADMAP.md  TERMINAL_README.md  __init__.py  advanced_analysis.py  agent_context.py  agent_loop.py  app.py  base.py  cascade_mode.py  demo.py  entry.py  file_service.py  mcphandler.py  models.py  playwright.config.ts  pyproject.toml  sharepoint_service.py  smart_merge.py  smart_merge_enhanced.py  task_manager.py  task_parser.py  throttle_spinner.py  todo.py  todo_cascade_integration.py  todoist_service.py  truncation_phrases.txt
robodogcli/: - Adjust todo.py _process_one()  - Enhance todoservice watcher in todo.py  - Modify todo.py  - Refine service.py  CODEMAP_REACT_INTEGRATION.md  CODE_MAP_GUIDE.md  ConsoleCli.js  FINAL_MAP_FIX.md  PIPBOY_SIZE_UPDATE.md  README.md  SMART_MERGE_IMPROVEMENTS.md  THREE_BRACKET_FORMAT.md  UX_IMPROVEMENTS_SUMMARY.md  app_structure_summary.md  google_commands.py  out.py  package-lock.json  package.json  plan.md  prompt_builder.py  pyproject.toml  rd-features-v2.md  rd-features-v3.md  requirements.txt  robodog.py  sampleconfig.yaml  setup.py  todo.md  tsconfig.json  webpack.config.js
robodogcli/docs/: AGENT_LOOP_GUIDE.md  AMPLENOTE_INTEGRATION.md  ENHANCED_LOGGING.md  ENHANCEMENTS_SUMMARY.md  HELP_UPDATES.md  INDEX.md  PIPBOY_CHANGES.md  PIPBOY_FIXES_SUMMARY.md  PIPBOY_REMOVAL_GUIDE.md  PRECISE_SMART_MERGE.md  PREVENTING_IMPORT_ERRORS.md  QUICK_START_TODOIST.md  TODO_API_GUIDE.md  TODO_ENHANCEMENTS.md  TODO_FEATURES_SUMMARY.md  UI_MIGRATION.md
robodogcli/robodog/: .coverage  TERMINAL_README.md  __init__.py  agent_loop.py  agent_loop_enhanced.py  amplenote_service.py  app.py  base.py  cascade_mode.py  cli-v2.py  cli.py  cli2.py  cli3.py  code_map.py  dashboard.py  diff_service.py  entry.py  file_service.py  file_watcher.py  google_commands.py  google_service.py  mcp_server.py  mcphandler.py  models.py  parse_service-v2.py  parse_service.py  pipboy_ui.py.old  prompt_builder.py  pyproject.toml  service-out.py  service.py  simple_ui.py  smart_merge.py  smart_merge_precise.py  task_manager.py  task_parser.py  throttle_spinner.py  todo-v2 copy.py  todo-v2.py  todo-v3.py  (+8 more)
robodogcli/robodog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
robodogcli/robodog/robodog_terminal/: app.py  background.py  checkpoint.py  doctor.py  sessions.py  tasklist.py  test_app.py  test_command_reaction.py  test_concurrency.py  test_input.py  test_rendering.py  test_sessions.py  test_turnrunner.py  ui.py
robodogcli/robodog/terminal/: __init__.py  __main__.py  agents.py  app.py  background.py  checkpoint.py  doctor.py  llm_client.py  loop.py  run_tests.py  selftest.py  sessions.py  skills.py  tasklist.py  test_app.py  test_background.py  test_command_reaction.py  test_concurrency.py  test_doctor.py  test_edit_quality.py  test_input.py  test_integration.py  test_llm_client.py  test_loop_checkpoint.py  (+11 more)
robodogcli/robodogcli.egg-info/: PKG-INFO  SOURCES.txt
robodogcli/src/: ConsoleCli.js  index.js
robodogcli/temp/: features.md  out.md  out.py  todo.py
robodogcli/unclebulgaria_robodog.egg-info/: PKG-INFO  SOURCES.txt
(+263 files in other folders)
