[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodogcli"
version = "2.6.12"
description = "Robodog"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "adourish", email = "adourish@gmail.com" }
]
dependencies = [
  # e.g. "requests>=2.25.1",
]
keywords = ["robot", "dog", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adourish/robodog"
Repository = "https://github.com/adourish/robodog.git"
Documentation = "https://robodog.readthedocs.io"

