# Standalone distribution for Terminal Mode.
# Build from this directory (robodogcli/robodog):  python -m build
# Installs the `terminal` package plus the `robodog-terminal` / `robodogt` commands.
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodog-terminal"
version = "0.3.0"
description = "Agentic coding terminal for the shell (runPixel gateway / OpenAI-compatible / offline backends)"
readme = "TERMINAL_README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "adourish" }]
keywords = ["agent", "coding", "terminal", "cli", "gateway", "llm", "openrouter"]
dependencies = [
  "rich>=13",
  "prompt_toolkit>=3",
  "requests>=2.25",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6"]        # nicer .yaml verification in edits
keepass = ["pykeepass>=4"]  # /keepass vault + encrypted key storage

[project.scripts]
robodog-terminal = "robodog_terminal.app:main"
robodogt = "robodog_terminal.app:main"

[project.urls]
Homepage = "https://github.com/adourish/robodog"
Repository = "https://github.com/adourish/robodog.git"

[tool.setuptools]
packages = ["robodog_terminal"]
